--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "devDependencies": {
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
-    "prettier-repo": "https://github.com/prettier/prettier.git#1.18.2"
+    "prettier-repo": "https://github.com/prettier/prettier.git#1.18.2",
+    "jsdoc-repo": "https://github.com/jsdoc/jsdoc.git#jsdoc@4.0.0-dev.10"
   },
   "jest": {
     "verbose": true,
