--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "prettier-plugin-jsdoc",
   "version": "1.0.0",
   "description": "",
-  "main": "src/main.js",
+  "main": "jsdoc_parser.js",
   "scripts": {
     "test": "jest"
   },
@@ -14,14 +14,15 @@
   "license": "ISC",
   "devDependencies": {
     "jest": "^24.9.0",
-    "prettier": "^1.18.2",
-    "prettier-repo": "https://github.com/prettier/prettier.git#1.18.2",
-    "jsdoc-repo": "https://github.com/jsdoc/jsdoc.git#jsdoc@4.0.0-dev.10"
+    "prettier": "^1.18.2"
   },
   "jest": {
     "verbose": true,
     "testMatch": [
       "**/tests/**/*.js"
     ]
+  },
+  "dependencies": {
+    "doctrine": "^3.0.0"
   }
 }
