--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     ]
   },
   "dependencies": {
-    "prettier": "^1.18.2",
-    "doctrine": "^3.0.0"
+    "doctrine": "git+https://gitlab.com/gumen/doctrine.git",
+    "prettier": "^1.18.2"
   }
 }
