Add prettier and format all JS files

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "jsdoc_parser.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "prettier": "prettier --write \"**/*.js\""
   },
   "keywords": [
     "prettier",
